# docscanner_web

./: pyproject.toml
document_ui/: apps.py  urls.py  views.py
document_ui/templates/document_ui/: index.html
misite/: asgi.py  settings.py  urls.py  wsgi.py
