[project]
name = "docscanner-web"
version = "0.1.0"
description = "Webpage to interact with package doc-scanner"
authors = [
    {name = "Samuel Acevedo Bustamante"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
django = "^5.2.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
