[tool.poetry]
name = "docscanner-web"
version = "0.1.0"
description = "Webpage to interact with package doc-scanner"
authors = [ "Samuel Acevedo Bustamante"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.5,<6.0.0"
pillow = ">=11.3.0,<12.0.0"
doc-scanner = { path = "../doc-scanner", develop = true }


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
